# ad-work

./: .env.example  .gitignore  LICENSE  MAKEFILE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
dashboard/components/: cards.py  charts.py
dashboard/scripts_inline.py/: seed_demo_inline.py
data/processed/: agent_output.json  allocation_results.json  simulation_results.json
data/sample_campaigns/: sample_all_platforms.csv  sample_amazon_ads.csv  sample_google_ads.csv  sample_meta_ads.csv
models/ctr/: metadata.json
scripts/: download_criteo.py  run_agent.py  run_forecasts.py  run_optimization.py  seed_demo.py  train_ctr.py
src/adwork/: __init__.py  config.py
src/adwork/agent/: graph.py  llm_client.py  prompts.py  tools.py
src/adwork/data/: competitors.py  ingestion.py  schemas.py  trends.py
src/adwork/db/: connection.py  queries.py
src/adwork/models/: bandit.py  competitor_nlp.py  ctr_model.py  forecaster.py  registry.py
src/adwork/optimization/: bid_recommender.py  budget_allocator.py
src/adwork/pipeline/: daily_loop.py
tests/: test_agent.py  test_bandit.py  test_competitors.py  test_config.py  test_ctr_model.py  test_forecaster.py  test_ingestion.py  test_schemas.py
